SBVTestSuite/TestSuite/CompileTests/SCase/SCase38.stderr
SCase38.hs:12:14: error: [GHC-39584]
    " SCase38.hs:16:16-30: sCase/pCase: Arity mismatch in nested pattern.
        Constructor: Num
        Expected   : 1
        Given      : 2

    " In the quasi-quotation:
        [sCase|Expr e of
               Zero              -> 0
               Num k             -> k
               Var s             -> ite (s .== literal "a") 1 2
               Add (Num i j) b   -> i + t b
               Add a b           -> t a + t b
               Let _   _a  b     -> t b
      |]
   |
12 | t e = [sCase|Expr e of
   |              ^^^^^^^^^...

